--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,21 @@
+# build output
+dist/
+
+# generated types
+.astro/
+
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
-# gatsby
-.cache
-
-# testing
-/coverage
-
-# production
-/build
-/public
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
-.env*
+# environment variables
+.env
+.env.production
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# macOS-specific files
+.DS_Store
