--- a/package.json
+++ b/package.json
@@ -1,33 +1,18 @@
 {
   "name": "portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "description": "portfolio",
-  "author": "Allen Shibu",
-  "keywords": [
-    "gatsby"
-  ],
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "dev": "astro dev --host",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "gatsby": "^5.3.3",
-    "gatsby-plugin-sass": "^6.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-toastify": "^9.1.2",
-    "sass": "^1.62.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "gatsby-plugin-postcss": "^6.9.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.9.3",
+    "astro-icon": "^0.8.1",
+    "tailwindcss": "^3.0.24"
   }
 }
